fixed searchinput not aligning with top bar

--- a/src/app/components/hierarchical-list/hierarchical-list.component.scss
+++ b/src/app/components/hierarchical-list/hierarchical-list.component.scss
@@ -3,7 +3,7 @@
     text-overflow: ellipsis;
     border: 0;
     border-bottom: 1px solid var(--surface-border);
-    height: 42px;
+    height: 43px;
     &:hover{
         border-color: var(--primary-color)
     }
